gac_sb/objects/AppCIRcoutStandard__c.object
<CustomObject>
    <fields>
        <fullName>Cout_redacteur_RO__c</fullName>
        <label>Coût rédacteur RO</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_redacteur__c</fullName>
        <label>Coût rédacteur</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_standard_Consultant_RO__c</fullName>
        <label>Coût standard Consultant RO</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_standard_Consultant__c</fullName>
        <label>Coût standard Consultant</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_standard_Manager__c</fullName>
        <label>Coût standard Manager</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cout_standard_Superviseur__c</fullName>
        <label>Coût standard Superviseur</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>[OLD] Coût standard INNO advance</label>
    <nameField>
        <displayFormat>CSinno-{000}</displayFormat>
        <label>Coût standard INNO advance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coûts standards INNO advance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>